add unit test to Programm Detail

--- a/ksu-stan-tv-app/package.json
+++ b/ksu-stan-tv-app/package.json
@@ -42,5 +42,10 @@
   },
   "devDependencies": {
     "node-sass": "^7.0.3"
+  },
+  "jest": {
+    "testMatch": [
+      "**/src/**/?(*.)+(spec|test).[tj]s?(x)"
+    ]
   }
 }
